--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "yupp": "^0.3.0"
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
